2003-03-28	ujwal
    * Made addressbook non-modal.
    * Fixed a crash in showing preferences window.
    * Fixed bug in changing font for addressbook entries.

2003-03-28	fabian
    * Fixed bugs in selection
    * Fixed context menu
    * Fixed wrong setDirtyLine calls in VT100Screen
    * Fixed a bug in VT100Screen that causes duplicated lines
    * "Save as" now is working, we need a new print function
    * Fixed a crashing bug in "Save Config"
    * Fixed browse and mail in PTYTextView
    * Made selection invalid if text is changed
    
2003-03-27	ujwal

    * Protected some ARRAY specific code in #if USE_CUSTOM_DRAWING
      ...#endif so that BUFFER code does not crash.
      
    * Fixed bug in loading preferences nib.
      

2003-03-27	fabian
    * Bug fixes in ARRAY mode
    * We periodically scroll to the end to reduce amount
      of redraw when large trunk of data come in.
    
2003-03-26	fabian
    * Bug fixes in ARRAY mode
    * No long uses periodic update
    * Refresh now only updates the necessary part of screen
    
2003-03-26	ujwal

    * Created a new target "iTerm Framework" in the 
      project. This is the core of iTerm.app. The 
      iTerm application target just contains the 
      entry point source file and images. It then 
      links against the iTerm framework. This enables 
      other applications to link against iTerm framework 
      to embed iTerm functionality. 
      
    * Regrouped Preference and AddressBook elements into 
      separate NIB files. Created AddressBookWindowController 
      class.

2003-03-25	fabian
    * PTYTextView is now a subclass of NSView under ARRAY 
      mode. Text input works properly. 
    * Working selection and copy/paste 
        
2003-03-22	Ujwal S. Sathyam <ujwal@setlurgroup.com>
    
    * Added option-click support to position cursor.
    
    * Added keyboard shortcut to "Clear Buffer"

2003-03-20	fabian
    * Japanese localization patch from Yuichi OHKAWA